--- a/style.css
+++ b/style.css
@@ -135,3 +135,8 @@ body {
 }
 
 /* ADD YOUR LIKE AND DISLIKE HOVER/MOUSEOVER CSS CODE HERE */
+/*image resize*/
+.poster{
+  width: 500px;
+  height: 750px;
+}
